[tool.poetry]
name = "dnc"
version = "0.0.0"
description = "Robert Csordas' DNC implementation"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.62.3"
visdom = "^0.1.8"
numpy = "^1.22.2"
torch = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
